# fop4

./: README.md
auto-client/: main.py
server/: main.py  pyproject.toml  users.db
server/api/: _util.py  api.py
server/modules/applications/: _applications.py  applications.py
server/modules/mail/: mail.py
server/modules/user/: _user.py  user.py
server/templates/: acception.txt  apply.html  rejection.txt
