[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "foundations-of-programming-unit-4-project"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
python = "^3.7"
Flask-WTF = "^0.14.3"
Flask-SQLAlchemy = "^2.4"
Flask-Login = "^0.5.0"
Flask-Mail = "^0.9.1"
[tool.poetry.dev-dependencies]
